Se creó el builder y se hicieron tests de las distribuciones